# TubeFetchr

./: .gitignore  CMakeLists.txt  Makefile  build.sh  cli.spec  compile_commands.json  icon.rc  project.pro  resources.qrc
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
src/: cli.py  main.cpp  main.qml
src/qml/: HomeScreen.qml  SingleDownloadScreen.qml
